InhP4/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/usr/lib/jvm/java-7-openjdk-amd64/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
/usr/share/bluej/bluejcore.jar:/usr/share/bluej/junit-4.8.2.jar:/usr/share/bluej/userlib/pi4j-core.jar:/usr/share/bluej/userlib/pi4j-device.jar:/usr/share/bluej/userlib/pi4j-service.jar:/usr/share/bluej/userlib/pi4j-gpio-extension.jar:/home/cmis/tadpole2105-apcs-cmis/InhP4
-d
/home/cmis/tadpole2105-apcs-cmis/InhP4/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/usr/share/bluej/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/home/cmis/tadpole2105-apcs-cmis/InhP4/Postgrad.java
<---- end of javadoc command ---->
Loading source file /home/cmis/tadpole2105-apcs-cmis/InhP4/Postgrad.java...
/home/cmis/tadpole2105-apcs-cmis/InhP4/Postgrad.java:13: error: illegal start of expression
        return super.toString() + String.format("", );
                                                    ^
1 error
